sass/components/_form.scss
.form {
    background-color: $color-dark-green;
    display: flex;
    flex-direction: column;
    &__input {
        height: 4rem;
        width: 100%;
        padding: 0 1rem;
        border: none;
        margin: 1.5rem 0;
    }
    &__textarea-wrapper {
        width: 100%;
    }
    &__textarea {
        resize: none;
        padding: 1rem;
        margin: 1.5rem 0;
        border: none;
        width: 100%;
    }
    &__submit {
        width: 50%;
        cursor: pointer;
        margin-top: 1.5rem;
    }
    &__input,
    &__textarea {
        transition: all .15s;
        &:invalid {
            box-shadow: 0 0 2px 1px  red;
        }
        &:valid {
            box-shadow: 0 0 2px 1px $color-light-green;
        }
        &:focus {
            box-shadow: none;
            transform: scale(1.03);
        }
    }
    &__label {
        font-size: 1.5rem;
        color: $color-white;
        transition: all .3s;
        position: relative;
        bottom: 7.7rem;
        left: 3px;
    }
    &__input:placeholder-shown + &__label{
        opacity: 0;
        visibility: hidden;
        bottom: 5rem;
    }
}

@media only screen and(max-width:550px) {
    .form__submit {
        width: 100%;
    }
}

